tests/NormalTests/paczka1/small_fuzzy/88968664.err
Error in line 2: pzqL A837 60,2
Error in line 1: F0sX S268 58,3
Error in line 5: S268 A335 16,1
